--- a/frontend/src/components/pages/Home/HomeHero/HomeHero.scss
+++ b/frontend/src/components/pages/Home/HomeHero/HomeHero.scss
@@ -31,7 +31,7 @@
         font-family: $main-font-medium;
         letter-spacing: 3px;
         font-size: 40px;
-        margin-bottom: 30px;
+        margin-bottom: 50px;
         text-align: center;
         letter-spacing: 10px;
     
@@ -57,6 +57,7 @@
         -webkit-box-shadow: 2px 50px 74px 44px rgba(169, 140, 127, 0.14);
         -moz-box-shadow: 2px 50px 74px 44px rgba(169, 140, 127, 0.14);
         box-shadow: 2px 50px 74px 44px rgba(169, 140, 127, 0.14);
+        animation: rotate 3s ease;
         & > img {
           width: 100%;
           height: 100%;
@@ -95,9 +96,9 @@
   }
 
   &-description {
+    font-family: $main-font-medium;
     width: 300px;
     text-align: center;
-    margin-top: 150px;
     font-size: 20px;
     color: $main-color;
   }
@@ -153,5 +154,14 @@
     &-description  {
       display: none;
     }
+  }
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(15deg);
+  }
+  to {
+    transform: rotate(0);
   }
 }
