--- a/frontend/src/components/pages/Home/HomeHero/StarLogo/StarLogo.scss
+++ b/frontend/src/components/pages/Home/HomeHero/StarLogo/StarLogo.scss
@@ -1,12 +1,14 @@
 .StarLogo {
   margin-top: 100px;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   text-align: center;
   color: $main-color;
   font-size: 20px;
   font-family: $main-font-light;
   text-transform: uppercase;
-
+  & > svg {
+    font-size: 30px;
+  }
   &-header {
     font-size: 13px;
     letter-spacing: 3px;
