--- a/frontend/src/components/UI/Buttons/ShopBtn/ShopBtn.scss
+++ b/frontend/src/components/UI/Buttons/ShopBtn/ShopBtn.scss
@@ -3,7 +3,7 @@
   max-width: 200px;
   width: 100%;
   height: 200px;
-  border: 1px solid $main-color;
+  border: 1px solid $main-light-color;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -27,10 +27,10 @@
     background: transparent;
 
     &>a {
-      color: $main-color;
+      color: $main-light-color;
 
       &:hover {
-        border-bottom: 1px solid $main-color;
+        border-bottom: 1px solid $main-light-color;
       }
     }
 
