--- a/frontend/src/components/UI/TextLine/TextLine.scss
+++ b/frontend/src/components/UI/TextLine/TextLine.scss
@@ -3,8 +3,8 @@
   margin-top: 40px;
   width: 100%;
   height: 60px;
-  border-top: 1px solid $main-color;
-  border-bottom: 1px solid $main-color;
+  border-top: 1px solid $main-light-color;
+  border-bottom: 1px solid $main-light-color;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -19,7 +19,7 @@
     justify-content: center;
     font-size: 25px;
     text-transform: uppercase;
-    color: $main-color;
+    color: $main-light-color;
     font-family: 'Clara';
     letter-spacing: 10px;
     line-height: 100%;
