--- a/frontend/src/components/pages/Home/HomeHero/HomeHero.scss
+++ b/frontend/src/components/pages/Home/HomeHero/HomeHero.scss
@@ -17,6 +17,7 @@
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
     justify-items: center;
+    margin-bottom: 50px;
 
     &-window {
       display: flex;
@@ -31,13 +32,13 @@
         font-family: $main-font-medium;
         letter-spacing: 3px;
         font-size: 40px;
-        margin-bottom: 50px;
+        margin-bottom: 20px;
         text-align: center;
         letter-spacing: 10px;
     
         &.second {
+          margin-top: 20px;
           font-size: 70px;
-          margin-top: 30px;
         }
         & > strong {
           font-size: 70px;
@@ -71,9 +72,9 @@
       padding: 40px;
       width: 100%;
       font-family: $main-font-light-italic;
-      border: 1px solid $main-color;
+      border: 1px solid $main-light-color;
       border-radius: 50%;
-      color: $main-color;
+      color: $main-light-color;
       text-align: center;
       &-line {
         position: absolute;
@@ -82,7 +83,7 @@
         transform: rotate(65deg);
         width: 300px;
         height: 1px;
-        background: $main-color;
+        background: $main-light-color;
         animation: lineRotate 5s ease;
         transition: all 3s ease;
       }
@@ -96,11 +97,12 @@
   }
 
   &-description {
+    margin-bottom: 30px;
     font-family: $main-font-medium;
     width: 300px;
     text-align: center;
     font-size: 20px;
-    color: $main-color;
+    color: $main-light-color;
   }
 }
 
@@ -119,7 +121,13 @@
       &-window {
         &-title {
           width: 440px;
-          font-size: 35px;
+          font-size: 25px;
+          & > strong {
+            font-size: 40px;
+          }
+          &.second {
+            font-size: 40px;
+          }
         }
         &-image-box {
           width: 300px;
@@ -138,21 +146,34 @@
 }
 
 @media screen and (max-width: $breakpoint-sm) {
-  .HomeHero-showcase {
-    display: flex;
-    flex-direction: column;
-    &-window {
-      &-title {
-        width: 100%;
-        font-size: 25px;
+  .HomeHero {
+    &-showcase {
+      display: flex;
+      flex-direction: column;
+      &-window {
+        &-title {
+          width: 100%;
+          font-size: 25px;
+          letter-spacing: 3px;
+          & > strong {
+            font-size: 30px;
+          }
+          &.second {
+            font-size: 30px;
+          }
+        }
+        &-image-box {
+          width: 250px;
+          height: 350px;
+        }
       }
-      &-image-box {
-        width: 250px;
-        height: 350px;
+      &-description  {
+        display: none;
       }
     }
-    &-description  {
-      display: none;
+    &-description {
+      padding: 5px;
+      font-size: 16px;
     }
   }
 }
