--- a/frontend/src/components/pages/Home/HomeHero/StarLogo/StarLogo.scss
+++ b/frontend/src/components/pages/Home/HomeHero/StarLogo/StarLogo.scss
@@ -2,7 +2,7 @@
   margin-top: 100px;
   margin-bottom: 50px;
   text-align: center;
-  color: $main-color;
+  color: $main-light-color;
   font-size: 20px;
   font-family: $main-font-light;
   text-transform: uppercase;
@@ -12,5 +12,11 @@
   &-header {
     font-size: 13px;
     letter-spacing: 3px;
+  }
+}
+
+@media screen and (max-width: $breakpoint-sm) {
+  .StarLogo {
+    margin-bottom: 20px;
   }
 }
