--- a/frontend/src/components/pages/Home/HomeHero/SunLogo/SunLogo.scss
+++ b/frontend/src/components/pages/Home/HomeHero/SunLogo/SunLogo.scss
@@ -1,4 +1,4 @@
-.StarLogo {
+.SunLogo {
   margin-top: 100px;
   margin-bottom: 50px;
   text-align: center;
@@ -16,7 +16,7 @@
 }
 
 @media screen and (max-width: $breakpoint-sm) {
-  .StarLogo {
+  .SunLogo {
     margin-bottom: 20px;
   }
 }
