made second home part

--- a/frontend/src/style/index.scss
+++ b/frontend/src/style/index.scss
@@ -10,6 +10,7 @@
 // Basic import 
 @import './fonts/font_face.scss';
 @import './variables.scss';
+@import './utilites.scss';
 
 @import '../components/UI/indexUI.scss';
 @import '../components/pages/Home/HomePage.scss';
