--- a/frontend/src/components/pages/Home/Description/Description.scss
+++ b/frontend/src/components/pages/Home/Description/Description.scss
@@ -1,78 +1,79 @@
 .Description {
   min-height: 100vh;
   position: relative;
-  background: linear-gradient(27deg, rgba(24,24,24,1) 0%, rgba(24,24,24,1) 66%, rgba(169,140,127,0.2) 100%);
   & > div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    padding: 0 20px;
+  }
+
+  &-title {
+    margin-top: 80px;
+    font-size: 60px;
+    font-family: $main-font-medium;
+    color: $main-light-color;
+          letter-spacing: 5px;
   }
   &-header {
-    margin-top: 100px;
+    margin-top: 50px;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    font-size: 30px;
-    letter-spacing: 10px;
-    color: $main-light-color;
-    font-size: 35px;
-    text-transform: uppercase;
-    &-starttext {
-      font-size: 60px;
+    text-align: left;
+    width: 100%;
+
+    & > h3 {
+      max-width: 600px;
+      letter-spacing: 3px;
+      font-family: $main-font-regular;
+      font-size: 20px;
+      color: $main-light-color;
     }
-    &-span {
-      margin-left: 50px;
-      font-size: 30px;
-    }
-    &-endtext {
-      text-align: right;
-      margin-right: 50px;
+    &-mission {
+      max-width: 600px;
+      width: 100%;
+      margin-top: 50px;
+      text-align: center;
+      color: $main-light-color;
+      & > h3 {
+        text-align: left;
+        font-family: $main-font-regular;
+        letter-spacing: 2px;
+        font-size: 20px;
+      }
+      & > p {
+        max-width: 300px;
+        text-align: left;
+        font-family: $main-font-light;
+        margin-top: 10px;
+        font-size: 14px;
+      }
     }
   }
-
-  &-box {
-    display: flex;
+  &-image {
     width: 100%;
-    margin-top: 50px;
-    &-img {
-      max-width: 400px;
-      & > img {
-        width: 100%;
-        height: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+      & .first  {
+        margin-right: 50px;
+        border: 1px solid $main-light-color;
+        max-height: 200px;
+        max-width: 300px;
+        transform:rotate(-5deg);
+        z-index: 1;
+                        -webkit-box-shadow: 2px 50px 74px 44px rgba(169, 140, 127, 0.14);
+        -moz-box-shadow: 2px 50px 74px 44px rgba(169, 140, 127, 0.14);
+        box-shadow: 2px 50px 74px 44px rgba(169, 140, 127, 0.14);
       }
-      &.first {
-        height: 300px;
-      }
-      &.second {
-        align-self: center;
-        height: 200px;
-      }
-    }
-    &-content {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      max-width: 600px;
-      padding: 0 50px;
-
-      & > h3 {
-        width: 80%;
-        margin-top: 30px;
-        font-size: 20px;
-        color: $main-light-color;
-      }
-
-      & > p {
-        width: 40%;
-        align-self: flex-end;
-        text-align: right;
-        margin-top: 50px;
-        font-size: 15px;
-        color: $main-color;
-      }
-      & > button {
-        margin-top: 100px;
-        align-self: flex-end;
-      }
+      & .second  {
+        margin-right: 80px;
+        border: 1px solid $main-light-color;
+        max-height: 400px;
+        max-width: 300px;
+        transform: rotate(8deg);
+                -webkit-box-shadow: 2px 50px 74px 44px rgba(169, 140, 127, 0.14);
+        -moz-box-shadow: 2px 50px 74px 44px rgba(169, 140, 127, 0.14);
+        box-shadow: 2px 50px 74px 44px rgba(169, 140, 127, 0.14);
     }
   }
 }
