almost made home page

--- a/frontend/src/components/pages/Home/HomeHero/HomeHero.scss
+++ b/frontend/src/components/pages/Home/HomeHero/HomeHero.scss
@@ -170,6 +170,9 @@
       &-description  {
         display: none;
       }
+      & > button {
+        margin-top: 40px;
+      }
     }
     &-description {
       padding: 5px;
