--- a/frontend/src/components/pages/Home/Description/Description.scss
+++ b/frontend/src/components/pages/Home/Description/Description.scss
@@ -2,11 +2,11 @@
   min-height: 100vh;
   position: relative;
   & > div {
-    padding: 0 20px;
+    padding: 20px 30px;
   }
 
   &-title {
-    margin-top: 80px;
+    margin-top: 50px;
     font-size: 60px;
     font-family: $main-font-medium;
     color: $main-light-color;
@@ -20,7 +20,6 @@
     flex-direction: column;
     text-align: left;
     width: 100%;
-
     & > h3 {
       max-width: 600px;
       letter-spacing: 3px;
@@ -54,8 +53,9 @@
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
+    margin-bottom: 40px;
+    margin-right: 50px;
       & .first  {
-        margin-right: 50px;
         border: 1px solid $main-light-color;
         max-height: 200px;
         max-width: 300px;
@@ -75,5 +75,63 @@
         -moz-box-shadow: 2px 50px 74px 44px rgba(169, 140, 127, 0.14);
         box-shadow: 2px 50px 74px 44px rgba(169, 140, 127, 0.14);
     }
+  }
+}
+
+@media screen and (max-width: $breakpoint-lg) {
+  .Description {
+    &-title {
+      font-size: 40px;
+    }
+    &-header {
+      & > h3 {
+        font-size: 16px;
+        max-width: 400px;
+      }
+      &-mission {
+        max-width: 400px;
+        margin-top: 30px;
+        &> h3 {
+          font-size: 16px;
+        }
+        & > p {
+          max-width: 250px;
+          font-size: 12px;
+        }
+      }
+    }
+    &-image {
+      .first {
+        max-height: 150px;
+        max-width: 250px;
+      }
+      .second {
+        max-height: 300px;
+        max-width: 200px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $breakpoint-sm) {
+  .Description {
+    &-header {
+      align-items: flex-start;
+    }
+    &-image {
+      margin-top: 30px;
+      justify-content: center;
+      align-items: center;
+      margin-right: 0;
+      .first {
+        max-height: 100px;
+        max-width: 150px;
+      }
+      .second {
+        margin-right: 0;
+        max-height: 200px;
+        max-width: 100px;
+      }
+    } 
   }
 }
