--- a/frontend/src/components/pages/Home/HomePage.scss
+++ b/frontend/src/components/pages/Home/HomePage.scss
@@ -3,12 +3,11 @@
   background: $main-dark-color;
   &-baner {
     min-height: 50vh;
-    background: url(../../../image/baner2.jpg) no-repeat center center/cover;
+    background: url(../../../image/home/HomePageBanner.jpg) no-repeat center center/cover;
   }
 }
 
-
-@import './HomeHero/HomeHero.scss';
-@import './Description/Description.scss';
-@import './OurStory/OurStory.scss';
-@import './Follow/Follow.scss';
+@import "./HomeHero/HomeHero.scss";
+@import "./Description/Description.scss";
+@import "./OurStory/OurStory.scss";
+@import "./Follow/Follow.scss";
