--- a/frontend/src/style/index.scss
+++ b/frontend/src/style/index.scss
@@ -13,4 +13,4 @@
 @import './utilites.scss';
 
 @import '../components/UI/indexUI.scss';
-@import '../components/pages/Home/HomePage.scss';
+@import '../components/pages/pages.scss';
