--- a/frontend/src/components/UI/Footer/Footer.scss
+++ b/frontend/src/components/UI/Footer/Footer.scss
@@ -1,5 +1,143 @@
-.footer {
-  width: 100%;
-  height: 500px;
+.Footer {
   background: $main-light-color;
+  padding: 20px;
+
+  &-box {
+    width: 100%;
+    border: 1px solid $main-dark-color;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    &-wrpr {
+      display: flex;
+      width: 100%;
+      &-left {
+        flex: 1;
+        &-top {
+          width: 800px;
+          height: 50px;
+          display: flex;
+          border-bottom: 1px solid $main-dark-color;
+          display: flex;
+          align-items: center;
+
+          &-title {
+            height: 100%;
+            padding: 0 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex: 1;
+            text-transform: uppercase;
+            font-family: $main-font-regular;
+            color: $main-dark-color;
+            font-size: 25px;
+          }
+          &-logo {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            padding: 0 35px;
+            border-left: 1px solid $main-dark-color;
+            & > a {
+              text-decoration: none;
+              font-family: $main-font-bold-italic;
+              font-weight: bold;
+              font-size: 30px;
+              color: $main-dark-color;
+              text-transform: uppercase;
+            }
+          }
+        }
+        &-info {
+          width: 100%;
+          display: flex;
+          justify-content: space-evenly;
+          font-family: $main-font-regular;
+          &-container {
+            padding: 40px;
+            & > h3 {
+              font-size: 25px;
+              margin-bottom: 20px;
+            }
+            & > ul {
+              list-style: none;
+              & > li {
+                margin: 10px 0;
+                & > a {
+                  text-decoration: none;
+                  color: $main-dark-color;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &-right {
+        border-left: 1px solid $main-dark-color;
+        &-social {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          height: 50px;
+          border-bottom: 1px solid $main-dark-color;
+          & > div {
+            height: 100%;
+            width: 100%;
+          }
+          & > a {
+            padding: 0 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            border-left: 1px solid $main-dark-color;
+            text-transform: uppercase;
+            text-decoration: none;
+            font-family: $main-font-regular;
+            color: $main-dark-color;
+            font-size: 25px;
+          }
+        }
+        &-story {
+          height: 260px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          text-align: center;
+          & > p {
+            font-family: $main-font-regular;
+            font-size: 20px;
+          }
+        }
+      }
+    }
+
+    &-copyright {
+      width: 100%;
+      padding: 5px;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+      border-top: 1px solid $main-dark-color;
+      & > h2 {
+        font-family: $main-font-regular;
+        font-size: 16px;
+        letter-spacing: 3px;
+      }
+      & > a {
+        cursor: pointer;
+        margin-top: 5px;
+        text-decoration: none;
+        color: $main-dark-color;
+        font-family: $main-font-light-italic;
+        font-size: 16px;
+      }
+    }
+  }
 }
