--- a/frontend/src/components/UI/indexUI.scss
+++ b/frontend/src/components/UI/indexUI.scss
@@ -1,3 +1,3 @@
 @import './Footer/Footer.scss';
 @import './TextLine/TextLine.scss';
-@import './Buttons/ShopBtn/ShopBtn.scss';
+@import './Buttons/MainLinkButton.scss';
