--- a/frontend/src/components/pages/Home/Follow/Follow.scss
+++ b/frontend/src/components/pages/Home/Follow/Follow.scss
@@ -1,4 +1,107 @@
 .Follow {
   min-height: 100vh;
   background: $main-light-color;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &-box {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 60px 20px;
+
+    & > h3 {
+      // margin-top: 80px;
+      text-align: center;
+      font-family: $main-font-regular;
+      font-size: 60px;
+      letter-spacing: 5px;
+    }
+
+    & > img {
+      margin-top: 20px;
+      border: 1px solid $main-color;
+      border-top-left-radius: 50%;
+      border-top-right-radius: 50%;
+      max-width: 400px;
+      width: 100%;
+      max-height: 600px;
+      height: 100%;
+      &:hover ~ .Follow-box-line {
+        transform: translate(-50%, -50%) rotate(-30deg);
+      }
+    }
+    &-line {
+      position: absolute;
+      top: 70%;
+      left: 40%;
+      transform: translate(-50%, -50%) rotate(35deg);
+      width: 800px;
+      height: 1px;
+      background: $main-color;
+      transition: all 3s ease;
+    }
+    & > p {
+      text-align: center;
+      width: 300px;
+      margin-top: 70px;
+      font-family: $main-font-light;
+      font-size: 20px;
+      color: $main-dark-color;
+    }
+    & > button {
+      margin-right: 20px;
+      position: absolute;
+      right: 0;
+      top: 55%;
+    }
+  }
+}
+
+@media screen and (max-width: $breakpoint-lg) {
+  .Follow-box {
+    & > h3 {
+      font-size: 40px;
+    }
+    & > img {
+      max-height: 500px;
+      max-width: 300px;
+    }
+    &-line {
+      width: 500px;
+    }
+  }
+}
+
+@media screen and (max-width: $breakpoint-lg) {
+  .Follow-box {
+    & > h3 {
+      font-size: 30px;
+    }
+    
+    & > img {
+      max-height: 450px;
+      max-width: 250px;
+    }
+
+    & > p {
+      margin: 0;
+    }
+
+    &-line {
+      top: 50%;
+      left: 45%;
+      width: 400px;
+    }
+
+    & > button {
+      margin: 50px 0;
+      position: static;
+    }
+  }
 }
