--- a/frontend/src/components/UI/Footer/Footer.scss
+++ b/frontend/src/components/UI/Footer/Footer.scss
@@ -3,19 +3,19 @@
   padding: 20px;
 
   &-box {
-    width: 100%;
     border: 1px solid $main-dark-color;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
     flex-direction: column;
+    height: 100%;
+
     &-wrpr {
       display: flex;
-      width: 100%;
+
       &-left {
         flex: 1;
+
         &-top {
-          width: 800px;
+          flex: 1;
           height: 50px;
           display: flex;
           border-bottom: 1px solid $main-dark-color;
@@ -23,7 +23,6 @@
           align-items: center;
 
           &-title {
-            height: 100%;
             padding: 0 10px;
             display: flex;
             align-items: center;
@@ -35,10 +34,10 @@
             font-size: 25px;
           }
           &-logo {
+            height: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
-            height: 100%;
             padding: 0 35px;
             border-left: 1px solid $main-dark-color;
             & > a {
@@ -52,12 +51,14 @@
           }
         }
         &-info {
-          width: 100%;
           display: flex;
           justify-content: space-evenly;
+          align-items: center;
           font-family: $main-font-regular;
+          height: 260px;
+
           &-container {
-            padding: 40px;
+
             & > h3 {
               font-size: 25px;
               margin-bottom: 20px;
@@ -77,6 +78,7 @@
       }
 
       &-right {
+        width: 40%;
         border-left: 1px solid $main-dark-color;
         &-social {
           display: flex;
@@ -108,6 +110,7 @@
           align-items: center;
           justify-content: center;
           text-align: center;
+          padding: 20px;
           & > p {
             font-family: $main-font-regular;
             font-size: 20px;
@@ -137,6 +140,136 @@
         color: $main-dark-color;
         font-family: $main-font-light-italic;
         font-size: 16px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $breakpoint-lg) {
+  .Footer-box-wrpr {
+    &-left {
+      &-top {
+        &-title {
+          font-size: 20px;
+        }
+        &-logo {
+          padding: 0 25px;
+          & > a {
+            font-size: 25px;
+          }
+        }
+      }
+      &-info{
+        padding: 25px;
+        height: 200px;
+        &-container {
+          & > h3 {
+            margin-bottom: 10px;
+            font-size: 20px;
+          }
+          & > ul > li > a {
+            font-size: 14px;
+          }
+        }
+      }
+    }
+    &-right {
+      &-social {
+        & > a {
+          padding: 0 10px;
+          font-size: 20px;
+        }
+      }
+      &-story {
+        height: 200px;
+        & > p {
+          font-size: 16px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $breakpoint-md) {
+  .Footer-box-wrpr {
+    &-left {
+      &-top {
+        &-title {
+          font-size: 20px;
+        }
+        &-logo {
+          padding: 0 15px;
+          & > a {
+            font-size: 16px;
+          }
+        }
+      }
+      &-info{
+        padding: 15px;
+        &-container {
+          & > h3 {
+            margin-bottom: 5px;
+            font-size: 16px;
+          }
+          & > ul > li > a {
+            font-size: 12px;
+          }
+        }
+      }
+    }
+    &-right {
+      border: none;
+
+      &-social {
+        border-top:1px solid $main-dark-color ;
+        & > a {
+          border: none;
+          padding: 0 5px;
+          font-size: 16px;
+        }
+      }
+      &-story {
+        & > p {
+          font-size: 14px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $breakpoint-sm) {
+  .Footer-box-wrpr {
+    flex-direction: column;
+    &-left {
+      &-top {
+        &-title {
+          font-size: 14px;
+        }
+        &-logo {
+          flex: 1;
+        }
+      }
+      &-info {
+        padding: 0 5px;
+        text-align: center;
+      }
+    }
+
+    &-right {
+      width: 100%;
+      &-social {
+        justify-content: center;
+        & > div {
+          display: none;
+        }
+        & > a {
+          width: 100%;
+          justify-content: center;
+          align-items: center;
+          &:nth-child(2) {
+            border-right: 1px solid $main-dark-color;
+          }
+        }
       }
     }
   }
