--- a/frontend/src/components/pages/Home/Follow/Follow.scss
+++ b/frontend/src/components/pages/Home/Follow/Follow.scss
@@ -1,22 +1,17 @@
 .Follow {
   min-height: 100vh;
   background: $main-light-color;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex(center, center);
 
   &-box {
     width: 100%;
     height: 100%;
     position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include flex(center, center);
     flex-direction: column;
     padding: 60px 20px;
 
     & > h3 {
-      // margin-top: 80px;
       text-align: center;
       font-family: $main-font-regular;
       font-size: 60px;
@@ -83,7 +78,7 @@
     & > h3 {
       font-size: 30px;
     }
-    
+
     & > img {
       max-height: 450px;
       max-width: 250px;
