--- a/frontend/src/components/UI/indexUI.scss
+++ b/frontend/src/components/UI/indexUI.scss
@@ -1,3 +1,5 @@
-@import './Footer/Footer.scss';
+@import './Layout/Navigation/Navigation.scss';
+@import './Layout/Footer/Footer.scss';
+
 @import './TextLine/TextLine.scss';
 @import './Buttons/MainLinkButton.scss';
