--- a/frontend/src/style/index.scss
+++ b/frontend/src/style/index.scss
@@ -10,7 +10,7 @@
 // Basic import 
 @import './fonts/font_face.scss';
 @import './variables.scss';
-@import './utilites.scss';
+@import './utility.scss';
 
 @import '../components/UI/indexUI.scss';
 @import '../components/pages/pages.scss';
