--- a/frontend/src/components/UI/Buttons/MainLinkButton.scss
+++ b/frontend/src/components/UI/Buttons/MainLinkButton.scss
@@ -4,9 +4,7 @@
   width: 100%;
   height: 200px;
   border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex(center, center);
   flex-direction: column;
   transition: all 1s ease;
 
