--- a/frontend/src/components/pages/Home/Description/Description.scss
+++ b/frontend/src/components/pages/Home/Description/Description.scss
@@ -19,6 +19,7 @@
     flex-direction: column;
     text-align: left;
     width: 100%;
+
     & > h3 {
       max-width: 600px;
       letter-spacing: 3px;
@@ -26,18 +27,21 @@
       font-size: 20px;
       color: $main-light-color;
     }
+
     &-mission {
       max-width: 600px;
       width: 100%;
       margin-top: 50px;
       text-align: center;
       color: $main-light-color;
+
       & > h3 {
         text-align: left;
         font-family: $main-font-regular;
         letter-spacing: 2px;
         font-size: 20px;
       }
+
       & > p {
         max-width: 300px;
         text-align: left;
@@ -49,11 +53,10 @@
   }
   &-image {
     width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
+    @include flex(flex-end, flex-end);
     margin-bottom: 40px;
     margin-right: 50px;
+    
     & .first {
       border: 1px solid $main-light-color;
       max-height: 200px;
