--- a/frontend/src/components/pages/Home/HomeHero/HomeHero.scss
+++ b/frontend/src/components/pages/Home/HomeHero/HomeHero.scss
@@ -53,6 +53,7 @@
         -moz-box-shadow: 2px 50px 74px 44px rgba(169, 140, 127, 0.14);
         box-shadow: 2px 50px 74px 44px rgba(169, 140, 127, 0.14);
         animation: rotate 3s ease;
+        
         & > img {
           width: 100%;
           height: 100%;
@@ -82,9 +83,8 @@
         transition: all 3s ease;
       }
       &:hover {
-        transition: all 3s ease;
         .HomeHero-showcase-description-line {
-          transform: rotate(165deg);
+          @include hoverLineRotate(165deg)
         }
       }
     }
