--- a/frontend/src/components/UI/Layout/Navigation/Navigation.scss
+++ b/frontend/src/components/UI/Layout/Navigation/Navigation.scss
@@ -7,7 +7,7 @@
   padding: 20px;
   z-index: 100;
   z-index: 2;
-  
+
   &-box {
     position: relative;
     height: 60px;
@@ -19,9 +19,13 @@
   }
 }
 
+
+
 @media screen and (max-width: $breakpoint-sm) {
   .Navigation {
+    padding: 10px;
     &-box {
+      height: 40px;
       &::before {
         content: "";
         position: absolute;
@@ -29,23 +33,22 @@
         left: 0;
         height: 100%;
         width: 100%;
-        border: 1px solid $main-dark-color;
+        border: 1px solid $main-light-color;
         z-index: 2;
       }
 
       &-menuBtn {
-        width: 100px;
         height: 100%;
         @include flex(center, center);
-        border-left: 1px solid $main-dark-color;
+        border-left: 1px solid $main-light-color;
 
         &-toggle {
+          margin: 0 15px;
           outline: none;
           background: none;
           border: none;
-          padding: 10px;
-          width: 50px;
-          height: 50px;
+          width: 20px;
+          height: 20px;
           @include flex(center, space-between);
           flex-direction: column;
           cursor: pointer;
@@ -61,7 +64,7 @@
           }
 
           &-menu {
-            background: $main-dark-color;
+            background: $main-light-color;
             border-radius: 5px;
             width: 100%;
             height: 2px;
