--- a/frontend/src/components/pages/About/About.scss
+++ b/frontend/src/components/pages/About/About.scss
@@ -3,6 +3,9 @@
   min-height: 100vh;
   width: 100%;
   background: $main-light-color;
+  & > div {
+    padding: 25px;
+  }
 }
 
 @import './AboutTitle/AboutTitle.scss';
