--- a/frontend/src/components/pages/pages.scss
+++ b/frontend/src/components/pages/pages.scss
@@ -1,3 +1,4 @@
 @import './Home/HomePage.scss';
 @import './About/About.scss';
-@import './Contact/Contact.scss'
+@import './Contact/Contact.scss';
+@import './Shop/Shop.scss';
