--- a/frontend/src/style/variables.scss
+++ b/frontend/src/style/variables.scss
@@ -1,3 +1,8 @@
+// Root Thame Style
+
+$rootStyleTypeColor: var(--rootStyleTypeColor);
+$rootStyleTypeBg: var(--rootStyleTypeBg);
+
 // Color
 
 $main-color: #a98c7f;
