--- a/frontend/src/components/UI/Layout/Navigation/MenuLogo/MenuLogo.scss
+++ b/frontend/src/components/UI/Layout/Navigation/MenuLogo/MenuLogo.scss
@@ -1,16 +1,16 @@
 .MenuLogo {
   height: 100%;
-  border-right: 1px solid $main-light-color;
+  border-right: 1px solid $rootStyleTypeColor;
   @include flex(center, center);
   padding: 0 20px;
   z-index: 5;
 
   & > a {
     text-decoration: none;
-    font-family: $main-font-regular;
+    font-family: $main-font-bold;
     font-size: 25px;
     text-transform: uppercase;
-    color: $main-light-color;
+    color: $rootStyleTypeColor;
   }
 }
 
@@ -24,18 +24,19 @@
 @media screen and (max-width: $breakpoint-md) {
   .MenuLogo {
     & > a {
-      font-size: 16px;
+      font-size: 18px;
     }
   }
 }
 
 @media screen and (max-width: $breakpoint-sm) {
   .MenuLogo {
+    flex: 3;
     padding: 0 5px;
-    border-right: 1px solid $main-light-color;
+    border-right: 1px solid $rootStyleTypeColor;
     & > a {
-      color: $main-light-color;
-      font-size: 12px;
+      color: $rootStyleTypeColor;
+      font-size: 16px;
     }
   }
 }
