--- a/frontend/src/components/UI/SunLogo/SunLogo.scss
+++ b/frontend/src/components/UI/SunLogo/SunLogo.scss
@@ -1,8 +1,6 @@
 .SunLogo {
-  margin-top: 100px;
-  margin-bottom: 50px;
   text-align: center;
-  color: $main-light-color;
+  color: $rootStyleTypeColor;
   font-size: 20px;
   font-family: $main-font-light;
   text-transform: uppercase;
