--- a/frontend/src/components/UI/indexUI.scss
+++ b/frontend/src/components/UI/indexUI.scss
@@ -4,3 +4,8 @@
 @import './TextLine/TextLine.scss';
 @import './Buttons/MainLinkButton.scss';
 @import './Layout/Layout.scss';
+@import './SiteTitleNav/SiteTitleNav.scss';
+@import './LogoDescription/LogoDescription.scss';
+@import './SunLogo/SunLogo.scss';
+@import './FrameImage/FrameImage.scss';
+@import './Cursor/Cursor.scss';
