--- a/frontend/src/components/UI/indexUI.scss
+++ b/frontend/src/components/UI/indexUI.scss
@@ -2,10 +2,10 @@
 @import './Layout/Footer/Footer.scss';
 
 @import './TextLine/TextLine.scss';
-@import './Buttons/MainLinkButton.scss';
 @import './Layout/Layout.scss';
 @import './SiteTitleNav/SiteTitleNav.scss';
 @import './LogoDescription/LogoDescription.scss';
 @import './SunLogo/SunLogo.scss';
 @import './FrameImage/FrameImage.scss';
 @import './Cursor/Cursor.scss';
+@import './Buttons/buttons.scss';
