fix problem with resize, new problem with router

--- a/frontend/src/components/pages/pages.scss
+++ b/frontend/src/components/pages/pages.scss
@@ -2,3 +2,4 @@
 @import './About/About.scss';
 @import './Contact/Contact.scss';
 @import './Shop/Shop.scss';
+@import './ProductScreen/ProductScreen.scss';
