--- a/frontend/src/components/UI/indexUI.scss
+++ b/frontend/src/components/UI/indexUI.scss
@@ -9,3 +9,4 @@
 @import './FrameImage/FrameImage.scss';
 @import './Cursor/Cursor.scss';
 @import './Buttons/buttons.scss';
+@import './Cart/Cart.scss';
