--- a/frontend/src/components/pages/ProductScreen/ProductScreen.scss
+++ b/frontend/src/components/pages/ProductScreen/ProductScreen.scss
@@ -1,3 +1,8 @@
 .ProductScreen {
-  margin-top: 100px;
+  width: 100%;
+  height: 100vh;
+  background: $rootStyleTypeBg;
+  & > div {
+    padding: 100px 10px;
+  }
 }
