--- a/frontend/src/components/pages/Shop/ShopProducts/ShopProducts.scss
+++ b/frontend/src/components/pages/Shop/ShopProducts/ShopProducts.scss
@@ -3,81 +3,14 @@
   height: 100%;
   padding: 10px;
 
-  &-box {
+  &-container {
     margin-bottom: 40px;
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 20px;
-
-
-    &-card {
-      height: 550px;
-      align-self: center;
-      justify-self: center;
-      @include flex(center, flex-start);
-      flex-direction: column;
-      transition: all 0.5s ease;
-      
-      & > a {
-        text-align: center;
-        text-decoration: none;
-      }
-
-      &-title {
-        margin: 5px 0;
-        font-family: $main-font-bold;
-        font-size: 25px;
-      }
-      & > p {
-        margin-bottom: 10px;
-        font-family: $main-font-medium;
-      }
-
-      & > h5 {
-        margin: 10px;
-        font-family: $main-font-bold;
-        color: $rootStyleTypeColor;
-        font-size: 20px;
-      }
-
-      &-line {
-        width: 100%;
-        height: 1px;
-        border-radius: 100%;
-        background: rgb(227, 224, 222);
-        background: linear-gradient(
-          90deg,
-          rgba(227, 224, 222, 1) 0%,
-          rgba(169, 140, 127, 1) 30%,
-          rgba(169, 140, 127, 1) 50%,
-          rgba(169, 140, 127, 1) 72%,
-          rgba(227, 224, 222, 1) 100%
-        );
-      }
-
-      &-image {
-        width: 100%;
-        height: 400px;
-        transition: all 0.5s ease;
-        & > img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-        }
-      }
-      & > button {
-        height: 0;
-        transition: all 0.5s ease;
-      }
-
-      &:hover > button {
-        height: 60px;
-      }
-      &:hover  .ShopProducts-box-card-image {
-        height: 340px;
-      }
-    }
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    grid-gap: 25px;
   }
 }
+
+@import './ProductCard/ProductCard.scss';
