--- a/frontend/src/components/pages/Shop/ShopTitle/ShopTitle.scss
+++ b/frontend/src/components/pages/Shop/ShopTitle/ShopTitle.scss
@@ -44,14 +44,25 @@
     }
   }
 }
+
 @media screen and(max-width: $breakpoint-sm) {
   .ShopTitle {
     &-title {
       & > h2 {
-        font-size: 50px;
+        font-size: 45px;
       }
       & > p {
         font-size: 10px;
+      }
+    }
+  }
+}
+
+@media screen and(max-width: $breakpoint-xsm) {
+  .ShopTitle {
+    &-title {
+      & > h2 {
+        font-size: 35px;
       }
     }
   }
