--- a/frontend/src/components/pages/ProductScreen/ProductScreen.scss
+++ b/frontend/src/components/pages/ProductScreen/ProductScreen.scss
@@ -1,8 +1,44 @@
 .ProductScreen {
   width: 100%;
-  height: 100vh;
+  min-height: 90vh;
   background: $rootStyleTypeBg;
-  & > div {
-    padding: 100px 10px;
+  padding-top: 100px;
+
+  &-box {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+    grid-gap: 30px;
+    padding: 10px;
+    margin-top: 50px;
+    
+    &-image {
+      width: 100%;
+      max-height: 60vh;
+      height: 100%;
+      overflow: hidden;
+      & > img {
+        object-fit: cover;
+      }
+    }
+    &-info {
+      align-self: flex-start;
+      flex: 1;
+    }
+  }
+}
+
+@media screen and(max-width: $breakpoint-lg) {
+  .ProductScreen {
+    padding-top: 90px;
+  }
+}
+@media screen and(max-width: $breakpoint-md) {
+  .ProductScreen {
+    padding-top: 80px;
+  }
+}
+@media screen and(max-width: $breakpoint-sm) {
+  .ProductScreen {
+    padding-top: 70px;
   }
 }
