--- a/frontend/src/components/pages/Shop/ShopCategories/ShopCategories.scss
+++ b/frontend/src/components/pages/Shop/ShopCategories/ShopCategories.scss
@@ -15,3 +15,38 @@
     }
   }
 }
+
+@media screen and(max-width: $breakpoint-lg) {
+  .ShopCategories ul li a {
+    font-size: 22px;
+  }
+}
+
+@media screen and(max-width: $breakpoint-md) {
+  .ShopCategories  {
+    min-width: 200px;
+    ul > li {
+      margin-bottom: 10px;
+      & > a {
+        font-size: 18px;
+      } 
+    }
+  }
+}
+
+@media screen and(max-width: $breakpoint-sm) {
+  .ShopCategories  {
+    width: 100%;
+    ul {
+      @include flex(center, space-between);
+      flex-wrap: wrap;
+      padding: 0;
+      & > li {
+        padding: 10px;
+        & > a {
+          font-size: 16px;
+        }
+      } 
+    }
+  }
+}
